--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "axios": "^1.3.4",
     "ethers": "^5.7.2",
     "react": "^18.2",
     "react-dom": "^18.2",
