--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,8 +16,10 @@
     "@thirdweb-dev/sdk": "^3",
     "axios": "^1.3.4",
     "ethers": "^5.7.2",
+    "firebase": "^9.19.1",
     "react": "^18.2",
     "react-dom": "^18.2",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
